[gd_scene load_steps=4 format=2]

[ext_resource path="res://Reused/ReusableSystems/DOptionSelect/DOptionSelect.gd" type="Script" id=1]
[ext_resource path="res://Reused/Resources/Icons/Forward.png" type="Texture" id=2]
[ext_resource path="res://Reused/Resources/Icons/Back.png" type="Texture" id=3]

[node name="DOptionSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="Button" parent="."]
anchor_bottom = 1.0
margin_right = 40.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="LeftButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="RightButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 6

[node name="SelectedButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_right = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_right = -40.0
text = "Example"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="SelectedButton" to="." method="_on_SelectedButton_pressed"]
